--- a/backend/package.json
+++ b/backend/package.json
@@ -11,20 +11,21 @@
     "prisma:deploy": "prisma migrate deploy"
   },
   "dependencies": {
-    "fastify": "^4.26.0",
     "@fastify/cors": "^9.0.0",
     "@fastify/helmet": "^11.1.0",
     "@fastify/rate-limit": "^9.1.0",
     "@prisma/client": "^5.11.0",
-    "zod": "^3.22.0",
     "dotenv": "^16.4.0",
+    "fastify": "^4.26.0",
     "pino": "^8.19.0",
-    "pino-pretty": "^11.0.0"
+    "pino-pretty": "^11.0.0",
+    "resend": "^6.5.2",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
-    "typescript": "^5.4.0",
+    "prisma": "^5.11.0",
     "tsx": "^4.7.0",
-    "prisma": "^5.11.0"
+    "typescript": "^5.4.0"
   }
 }
