migrate to golang

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,53 @@
+# Savegress Platform Environment Variables
+# Copy to .env.production and fill in real values
+
+# ===========================================
 # Database
+# ===========================================
 DB_PASSWORD=change_this_to_secure_password_in_production
-DATABASE_URL=postgresql://savegress:change_this_to_secure_password_in_production@postgres:5432/savegress
-
-# Redis
 REDIS_PASSWORD=change_this_to_secure_redis_password
-REDIS_URL=redis://:change_this_to_secure_redis_password@redis:6379
 
-# Backend API
-NODE_ENV=production
-PORT=3001
-HOST=0.0.0.0
-LOG_LEVEL=info
-CORS_ORIGIN=https://savegress.com
+# ===========================================
+# JWT Authentication
+# ===========================================
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
 
+# ===========================================
+# License Keys (Ed25519 base64-encoded)
+# ===========================================
+# Generate with:
+#   openssl genpkey -algorithm ed25519 | openssl pkey -outform DER | base64
+#   openssl pkey -in <(openssl genpkey -algorithm ed25519) -pubout -outform DER | base64
+LICENSE_PRIVATE_KEY=base64-encoded-private-key
+LICENSE_PUBLIC_KEY=base64-encoded-public-key
+
+# ===========================================
+# Stripe Billing
+# ===========================================
+STRIPE_SECRET_KEY=sk_live_your_stripe_secret_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+STRIPE_PRO_PRICE_ID=price_pro_monthly_id
+STRIPE_ENT_PRICE_ID=price_enterprise_monthly_id
+
+# ===========================================
+# Cloudflare Turnstile (captcha)
+# ===========================================
+TURNSTILE_SITE_KEY=your-turnstile-site-key
+TURNSTILE_SECRET_KEY=your-turnstile-secret-key
+
+# ===========================================
+# Email Notifications (Resend)
+# ===========================================
+ADMIN_EMAIL=admin@savegress.io
+RESEND_API_KEY=re_your_resend_api_key
+
+# ===========================================
 # Frontend
+# ===========================================
 NEXT_PUBLIC_API_URL=https://savegress.com
+NEXT_PUBLIC_TURNSTILE_SITE_KEY=your-turnstile-site-key
 
-# Email (TODO: configure when ready)
-# EMAIL_SERVICE=resend
-# EMAIL_API_KEY=
-# EMAIL_FROM=noreply@savegress.com
-# ADMIN_EMAIL=admin@savegress.com
+# ===========================================
+# Build/Deploy
+# ===========================================
+VERSION=dev
