--- a/docker/docker-compose.local.yml
+++ b/docker/docker-compose.local.yml
@@ -22,10 +22,14 @@ services:
     build:
       context: ../frontend
       dockerfile: ../docker/frontend.Dockerfile
+      args:
+        - NEXT_PUBLIC_API_URL=http://localhost
+        - NEXT_PUBLIC_TURNSTILE_SITE_KEY=1x00000000000000000000AA
     container_name: savegress-frontend
     restart: unless-stopped
     environment:
       - NEXT_PUBLIC_API_URL=http://localhost
+      - NEXT_PUBLIC_TURNSTILE_SITE_KEY=1x00000000000000000000AA
     networks:
       - savegress-network
     depends_on:
@@ -33,26 +37,38 @@ services:
 
   backend:
     build:
-      context: ../backend
-      dockerfile: ../docker/backend.Dockerfile
+      context: ..
+      dockerfile: docker/backend.Dockerfile
+      args:
+        - VERSION=local
     container_name: savegress-backend
     restart: unless-stopped
     environment:
-      - NODE_ENV=production
-      - PORT=3001
-      - HOST=0.0.0.0
-      - DATABASE_URL=postgresql://savegress:localdev123@postgres:5432/savegress
-      - REDIS_URL=redis://:localdev123@redis:6379
-      - CORS_ORIGIN=http://localhost
-      - LOG_LEVEL=info
+      - PORT=8080
+      - ENVIRONMENT=development
+      - DATABASE_URL=postgresql://savegress:localdev123@postgres:5432/savegress?sslmode=disable
+      - REDIS_URL=redis://:localdev123@redis:6379/0
+      - ALLOWED_ORIGINS=http://localhost,http://localhost:3000
+      - JWT_SECRET=local-dev-jwt-secret-not-for-production
+      - LICENSE_PRIVATE_KEY=
+      - STRIPE_SECRET_KEY=sk_test_fake
+      - STRIPE_WEBHOOK_SECRET=whsec_fake
+      - TURNSTILE_SECRET_KEY=1x0000000000000000000000000000000AA
+      - ADMIN_EMAIL=test@localhost
+      - RESEND_API_KEY=
     networks:
       - savegress-network
     depends_on:
       postgres:
         condition: service_healthy
       redis:
-        condition: service_started
-    command: sh -c "npx prisma db push --skip-generate && npm start"
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health/live"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
 
   postgres:
     image: postgres:16-alpine
@@ -65,6 +81,7 @@ services:
       - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ../backend/migrations:/docker-entrypoint-initdb.d:ro
     networks:
       - savegress-network
     healthcheck:
@@ -84,6 +101,11 @@ services:
       - redis_data:/data
     networks:
       - savegress-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "localdev123", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
     ports:
       - "6379:6379"
 
