--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -1,4 +1,5 @@
-# Local development docker-compose
+# Development with hot reload for frontend
+# Usage: docker compose -f docker-compose.dev.yml up
 
 services:
   caddy:
@@ -19,17 +20,20 @@ services:
       - backend
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: ../docker/frontend.Dockerfile
-      args:
-        - NEXT_PUBLIC_API_URL=http://localhost
-        - NEXT_PUBLIC_TURNSTILE_SITE_KEY=1x00000000000000000000AA
+    image: node:20-alpine
     container_name: savegress-frontend
-    restart: unless-stopped
+    working_dir: /app
+    command: sh -c "npm install && npm run dev"
+    volumes:
+      - ../frontend:/app
+      - /app/node_modules
+      - /app/.next
     environment:
       - NEXT_PUBLIC_API_URL=http://localhost
       - NEXT_PUBLIC_TURNSTILE_SITE_KEY=1x00000000000000000000AA
+      - WATCHPACK_POLLING=true
+    ports:
+      - "3000:3000"
     networks:
       - savegress-network
     depends_on:
