--- a/.env.example
+++ b/.env.example
@@ -15,9 +15,7 @@ JWT_SECRET=your-super-secret-jwt-key-change-in-production
 # ===========================================
 # License Keys (Ed25519 base64-encoded)
 # ===========================================
-# Generate with:
-#   openssl genpkey -algorithm ed25519 | openssl pkey -outform DER | base64
-#   openssl pkey -in <(openssl genpkey -algorithm ed25519) -pubout -outform DER | base64
+# Generate with: go run backend/cmd/genkeys/main.go
 LICENSE_PRIVATE_KEY=base64-encoded-private-key
 LICENSE_PUBLIC_KEY=base64-encoded-public-key
 
