--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,7 @@ RESEND_API_KEY=re_your_resend_api_key
 NEXT_PUBLIC_API_URL=https://savegress.com
 NEXT_PUBLIC_TURNSTILE_SITE_KEY=your-turnstile-site-key
 NEXT_PUBLIC_CALENDLY_URL=https://cal.com/savegress/30min
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-CWFHKP4MRC
 
 # ===========================================
 # Build/Deploy
